# MySoftRenderer

./: geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  tgaimage.cpp
ZeroRealTimeSoftRenderer/: CMakeLists.txt  README.md  build_proj.bat
ZeroRealTimeSoftRenderer/res/skybox4/ibl/: i_nx.tga  i_ny.tga  i_nz.tga  i_px.tga  i_py.tga  i_pz.tga  m0_nx.tga  m0_nz.tga  m0_px.tga  m0_py.tga  m0_pz.tga  m1_nx.tga  m1_ny.tga  m1_nz.tga  m1_px.tga  m1_py.tga  m1_pz.tga  m2_nx.tga  m2_ny.tga  m2_nz.tga  m2_px.tga  m2_py.tga  m2_pz.tga  m3_nx.tga  m3_ny.tga  m3_nz.tga  m3_px.tga  m3_py.tga  m3_pz.tga  m4_nx.tga  m4_ny.tga  m4_nz.tga  m4_px.tga  m4_py.tga  m4_pz.tga  m5_nx.tga  m5_ny.tga  m5_nz.tga  m5_px.tga  m5_py.tga  (+25 more)
ZeroRealTimeSoftRenderer/src/: main.cpp
ZeroRealTimeSoftRenderer/src/attachment_prj/: iradiance_map.cpp  precaculate_tex.cpp
ZeroRealTimeSoftRenderer/src/core/: camera.cpp  camera.h  core.h  debug.cpp  debug.h  framebuffer.cpp  framebuffer.h  input.h  math.hpp  math_ext.cpp  math_ext.h  maths.h  mesh.cpp  mesh.h  model.cpp  model.h  pipeline.cpp  pipeline.h  render_command.cpp  render_command.h  render_mesh.cpp  render_mesh.h  scene.cpp  scene.h  shader.h  tgaimage.h  utils.cpp  utils.h
ZeroRealTimeSoftRenderer/src/core/glm/: fwd.hpp
ZeroRealTimeSoftRenderer/src/platform/: win_input.cpp  win_platform.cpp  win_platform.h
ZeroRealTimeSoftRenderer/src/shader/: shader.cpp  shader.h  shader_IBL.cpp  shader_baselight.cpp  shader_hellotriangle.cpp  shader_pbr.cpp  shader_skybox.cpp
ZeroRealTimeSoftRenderer/src/test/: test.cpp
tinyrenderer/: CMakeLists.txt  README.md  geometry.h  our_gl.h  tgaimage.h
